# NLP_finance

./: .gitignore  AI_USAGE.md  DATA.md  ETHICS.md  README.md  REFLECTION.md  STUDY_GUIDE.md  main.py  pyproject.toml
data/raw/: url_manifest.csv
notebooks/: 01_exploration.ipynb  02_full_pipeline.ipynb
src/: pipeline.py
src/evaluation/: error_analysis.py  metrics.py  visualizations.py
src/models/: chunker.py  finbert.py  lm_lexicon.py
src/processing/: cleaner.py  pipeline.py  returns.py  segmenter.py  tokenizer.py
src/scrapers/: motley_fool.py  rate_limiter.py  url_builder.py
src/utils/: storage.py
tests/: test_finbert.py  test_lm_lexicon.py  test_metrics.py  test_placeholder.py  test_scraper.py  test_segmenter.py
tests/fixtures/: sample_transcript.html
