[project]
name = "nlp"
version = "0.1.0"
description = "Comparative Sentiment Analysis of Earnings Calls (Prepared Remarks vs. Q&A)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Scraping
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "fake-useragent>=1.5",
    "tenacity>=8.3",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    # NLP
    "nltk>=3.8",
    # Transformers / FinBERT
    "transformers>=4.40",
    "torch>=2.3",
    "sentencepiece>=0.2",
    # Evaluation / Stats
    "scikit-learn>=1.4",
    "scipy>=1.13",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Utilities
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests requiring network or model downloads (deselect with -m 'not slow')"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
